# statediff

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
fixtures/: README.md
fixtures/baseline/: capture-provenance.json
fixtures/baseline/hold/: after-events.jsonl  after-snapshot.json  before-snapshot.json  mid-events.jsonl
fixtures/baseline/payment/: after-snapshot.json
fixtures/baseline/schema2/: before-events.jsonl  before-snapshot.json
fixtures/defects/broken-counters/: after-events.jsonl  after-snapshot.json  manifest.json
fixtures/defects/broken-hash/: after-snapshot.json  manifest.json
fixtures/defects/duplicate-payment/: after-snapshot.json  manifest.json  run-context.json
fixtures/defects/invalid-transition/: after-snapshot.json  manifest.json
fixtures/defects/missing-audit-event/: after-events.jsonl  after-snapshot.json  manifest.json
fixtures/defects/rewritten-history/: after-events.jsonl  after-snapshot.json  manifest.json
fixtures/defects/uncompensated-hold/: after-snapshot.json  manifest.json
fixtures/vectors/: canonical-vectors.json
scenarios/: hold-compensation.yaml  payment-release.yaml
src/statediff/: __init__.py  adapter.py  canonical.py  cli.py  diff.py  engine.py  evidence.py  gate.py  models.py  scenario.py
tests/: conftest.py  test_adapter.py  test_canonical.py  test_cli.py  test_defect_matrix.py  test_engine.py  test_hardening_round.py  test_inmemory_scenarios.py  test_rules.py  test_tools.py
tools/: capture_baselines.py  inject_defects.py
(+11 files in other folders)
